training and testing data

--- a/starter_code.Rmd
+++ b/starter_code.Rmd
@@ -142,7 +142,7 @@ logistic_reg() %>%
   bind_cols(clean) %>%
   metrics(truth = dvote, estimate = .pred_class)%>%
   gt() %>% 
-  tab_header("Model 3 Evaluation on All Data")
+  tab_header("Model 2 Evaluation on All Data")
 
 ```
 
@@ -155,6 +155,8 @@ split <- initial_split(clean, prop = 0.01)
 training <- training(split)
 testing <- testing(split)
 
+set.seed(10)
+
 # Do a logistic regression -- on just the 1% training data
 logistic_reg() %>%
   #Set the type of regression (GLM is default)
@@ -166,7 +168,7 @@ logistic_reg() %>%
   bind_cols(training) %>%
   metrics(truth = dvote, estimate = .pred_class)%>%
   gt() %>% 
-  tab_header("Model 4 Evaluation on All Data")
+  tab_header("Model 2 Evaluation on Testing Data")
 
 # Do a logistic regression -- using training data then testing it on testing data
 logistic_reg() %>%
@@ -179,7 +181,7 @@ logistic_reg() %>%
   bind_cols(testing) %>%
   metrics(truth = dvote, estimate = .pred_class)%>%
   gt() %>% 
-  tab_header("Model 5 Evaluation on All Data")
+  tab_header("Model 2 Evaluation on Training Data")
   
 
 ```
